--- a/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
@@ -82,7 +82,7 @@
 			background-image: linear-gradient(0deg, $ui-text-light, $ui-text-light);
 			background-clip: text;
 			display: block;
-			font-size: 0.65em;
+			font-size: 1.25rem;
 			font-weight: 700;
 			line-height: 120%;
 			text-transform: none;
