--- a/react-portfolio-contentful/src/assets/styles/main.module.scss
+++ b/react-portfolio-contentful/src/assets/styles/main.module.scss
@@ -3,6 +3,8 @@
 @import './layout';
 @import './_components/navigation';
 @import './_components/header';
-@import './_components/hero';
 @import './_components/footer';
+@import './_components/hero';
+@import './_components/topic';
 @import './App.module.scss';
+@import './helper';
