Set up routing to having page navigation.

--- a/react-portfolio-contentful/src/assets/styles/_utils.scss
+++ b/react-portfolio-contentful/src/assets/styles/_utils.scss
@@ -12,7 +12,7 @@ $ui-primary: $brand-yellow;
 $ui-secondary: $brand-orange;
 $ui-text-light: $brand-white;
 $ui-text-dark: $brand-black;
-$ui-background: $brand-violet;
+$ui-background: $brand-black;
 
 $c-header-background-dark: #01013c99;
 $c-header-background-light: #fdfaf0c5;
