Restructured query parameters for project pages
Restructured project pages in contentful and added another project section to prepare to finish building my first blog page.
Updated css to render the header and footer correctly.

--- a/react-portfolio-contentful/src/assets/styles/main.module.scss
+++ b/react-portfolio-contentful/src/assets/styles/main.module.scss
@@ -1,3 +1,4 @@
+@import './App.module.scss';
 @import './utils';
 @import './base';
 @import './layout';
@@ -6,5 +7,5 @@
 @import './_components/footer';
 @import './_components/hero';
 @import './_components/topic';
-@import './App.module.scss';
+@import './_pages/project';
 @import './helper';
