--- a/react-portfolio-contentful/src/assets/styles/main.module.scss
+++ b/react-portfolio-contentful/src/assets/styles/main.module.scss
@@ -7,5 +7,7 @@
 @import './_components/footer';
 @import './_components/hero';
 @import './_components/topic';
+@import './_components/card';
 @import './_pages/project';
+@import './_pages/project_list';
 @import './helper';
