--- a/react-portfolio-contentful/src/assets/styles/_components/_card.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_card.scss
@@ -1,25 +1,30 @@
 .c_card {
+    background: $brand-violet;
+    border-radius: 1.25rem;
+    display: block;
     height: 100%;
     min-height: 180px;
     max-width: 220px;
     min-width: 180px;
+    padding: 0.5rem 0.5rem 1rem;
     position: relative;
+    top: 0;
     transition: top 0.25s ease;
     width: 100%;
 
     &::before {
         background: $ui-background;
-        border-radius: 1rem;
+        border-radius: 2rem;
         color: #fdfaf0c9;
         content: '';
         font-size: 0.6rem;
         font-weight: 600;
         padding: 1em 1.5em;
-        position: relative;
+        position: absolute;
         text-transform: uppercase;
         letter-spacing: 2px;
-        top: 32px;
-        left: 8px;
+        top: 16px;
+        left: 16px;
         z-index: 99;
     }
 
@@ -41,7 +46,7 @@
 
         .card_label h4,
         .card_label p {
-            color: $brand-orange;
+            color: $brand-yellow;
         }
     }
 
@@ -52,7 +57,6 @@
         height: auto;
         margin-bottom: 1rem;
         position: relative;
-        top: 0;
         width: 100%;
     }
 
@@ -62,6 +66,7 @@
         flex-direction: column;
         gap: 0.5rem;
         justify-content: center;
+        // padding: 0 0.5rem;
 
         h4 {
             color: $ui-text-light;
