--- a/react-portfolio-contentful/src/assets/styles/_utils.scss
+++ b/react-portfolio-contentful/src/assets/styles/_utils.scss
@@ -26,7 +26,8 @@ $brand-font: 'Inter', 'Arial', sans-serif;
 
 // Measurements
 
-$screen-sm: 480px;
-$screen-md: 620px;
+$screen-xs: 480px;
+$screen-sm: 620px;
+$screen-md: 780px;
 $screen-lg: 960px;
 $screen-xl: 1260px;
