--- a/react-portfolio-contentful/src/assets/styles/_base.scss
+++ b/react-portfolio-contentful/src/assets/styles/_base.scss
@@ -35,7 +35,7 @@ h6 {
 }
 
 p {
-	font-weight: 400;
+	font-weight: 200;
 	line-height: 1.4em;
 }
 
@@ -56,15 +56,6 @@ li {
 	margin-bottom: 0.35rem;
 }
 
-.app {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	height: 100%;
-}
-
 .images_100,
 .images_50,
 .images_30 {
@@ -73,8 +64,6 @@ li {
 	justify-content: space-between;
 	align-items: flex-start;
 	gap: 1rem;
-	max-width: 460px;
-	margin: 3rem 0;
 
 	img {
 		overflow: hidden;
@@ -149,7 +138,6 @@ li {
 	width: 100%;
 }
 
-.c_container,
 .c_introduction,
 .c_body,
 .c_portfolio {
@@ -158,4 +146,8 @@ li {
 
 .c_main {
 	min-height: 100vh;
+}
+
+.c_body {
+	gap: 6rem;
 }
