--- a/react-portfolio-contentful/src/assets/styles/_components/_card.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_card.scss
@@ -1,15 +1,17 @@
 .c_card {
-    background: $brand-violet;
-    border-radius: 1.25rem;
-    display: block;
+    background-color: scale-color($brand-violet, $blackness: 25%);
+    border-radius: 1.5rem;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     min-height: 180px;
-    max-width: 220px;
-    min-width: 180px;
-    padding: 0.5rem 0.5rem 1rem;
+    min-width: 160px;
+    padding: 1rem 1rem;
     position: relative;
     top: 0;
-    transition: top 0.25s ease;
+    transition:
+        top 0.25s ease,
+        background-color 0.25s ease-out;
     width: 100%;
 
     &::before {
@@ -23,8 +25,8 @@
         position: absolute;
         text-transform: uppercase;
         letter-spacing: 2px;
-        top: 16px;
-        left: 16px;
+        top: 24px;
+        left: 24px;
         z-index: 99;
     }
 
@@ -37,6 +39,7 @@
     }
 
     &:hover {
+        background-color: $brand-violet;
         text-decoration: none;
         top: -0.25em;
 
@@ -64,25 +67,34 @@
         align-items: flex-start;
         display: flex;
         flex-direction: column;
-        gap: 0.5rem;
-        justify-content: center;
-        // padding: 0 0.5rem;
+        gap: 0.25rem;
+        height: 100%;
+        justify-content: flex-start;
 
         h4 {
             color: $ui-text-light;
             font-size: 1rem;
             font-weight: 600;
+            letter-spacing: 1px;
             line-height: 120%;
             text-align: left;
+            text-transform: uppercase;
         }
 
         p {
-            color: $ui-text-light;
-            font-size: 0.75rem;
-            font-weight: 400;
+            color: scale-color($ui-text-light, $alpha: -15%);
+            font-size: 0.9rem;
             line-height: 120%;
-            opacity: 0.85;
             text-align: left;
         }
+    }
+
+    .card_cta {
+        font-size: 0.85rem;
+        font-weight: 600;
+        letter-spacing: 1px;
+        margin-top: 1.5rem;
+        text-decoration: underline;
+        text-transform: uppercase;
     }
 }
