--- a/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
@@ -1,38 +1,55 @@
-.c_hero {
-	&[data-page-template='landing page'] {
-		height: 100vh;
-		justify-content: center;
-		max-width: 1200px;
+*[data-page-template='landing page'] > .c_hero {
+	height: 100vh;
+	justify-content: center;
+	max-width: 1200px;
+	min-height: 1200px;
+}
 
-		&[data-page-type='leadership'] {
-			background:
-				url(../../assets/images/leadership/hero/from-curiosity-to-impact--foreground.png) center center / 1200px
-					no-repeat,
-				url(../../assets/images/leadership/hero/backgrounds/from-curiosity-to-impact--background.jpg) center
-					center / 1200px no-repeat,
-				$brand-black;
-		}
-	}
+*[data-page-theme='leadership'] > .c_hero {
+	background:
+		url(../../assets/images/leadership/hero/from-curiosity-to-impact--foreground.png) center center / 1200px
+			no-repeat,
+		url(../../assets/images/leadership/hero/backgrounds/from-curiosity-to-impact--background.jpg) center center /
+			1200px no-repeat,
+		$brand-black;
 
 	h1.hero_headline {
 		align-self: center;
-		background-image: linear-gradient(
-			90deg,
-			$brand-yellow 10%,
-			$brand-orange 33.3%,
-			$brand-red 67.7%,
-			$brand-purple 90%
-		);
-		background-clip: text;
-		font-size: clamp(1rem, 14vw, 176px);
-		line-height: 1em;
 		padding: 0.25rem 0;
-		text-align: center;
-		-webkit-text-fill-color: transparent;
 		width: 100%;
 
-		span {
-			font-size: clamp(1rem, 19.5vw, 245px);
+		& > p {
+			&:first-child {
+				background-image: linear-gradient(
+					90deg,
+					$brand-yellow 10%,
+					$brand-orange 33.3%,
+					$brand-red 67.7%,
+					$brand-purple 90%
+				);
+				background-clip: text;
+				font-size: clamp(1rem, 14vw, 176px);
+				font-weight: 900;
+				line-height: 0.8em;
+				text-align: center;
+				-webkit-text-fill-color: transparent;
+			}
+
+			&:last-child {
+				background-image: linear-gradient(
+					90deg,
+					$brand-yellow 10%,
+					$brand-orange 33.3%,
+					$brand-red 67.7%,
+					$brand-purple 90%
+				);
+				background-clip: text;
+				font-size: clamp(1rem, 19.5vw, 245px);
+				font-weight: 900;
+				line-height: 0.8em;
+				text-align: center;
+				-webkit-text-fill-color: transparent;
+			}
 		}
 	}
 
@@ -45,7 +62,21 @@
 		text-align: right;
 		width: 100%;
 	}
+}
 
+.c_introduction {
+	align-items: flex-start;
+	gap: 2rem;
+	padding: 1rem 2rem;
+	max-width: 960px;
+
+	p {
+		font-size: 1.25rem;
+		font-weight: 200;
+	}
+}
+
+.c_hero {
 	img {
 		border-radius: 1rem;
 		width: 100%;
@@ -93,10 +124,99 @@
 			}
 		}
 
-		.project_tags {
-			color: $brand-orange;
-			font-size: 1rem;
-			font-weight: 700;
+		.project_ {
+			&tag__list {
+				display: flex;
+				flex-direction: row;
+				gap: 1rem;
+				margin-top: 1rem;
+			}
+
+			&tag__item {
+				background-color: scale-color($brand-violet, $lightness: 5%, $saturation: -50%);
+				border-radius: 2rem;
+				color: $ui-text-light;
+				font-size: 0.8rem;
+				font-weight: 600;
+				padding: 0.25rem 1rem;
+			}
 		}
 	}
+}
+
+.c_section > .c_hero {
+	justify-content: center;
+	max-width: 960px;
+	min-height: 100vh;
+
+	&:before {
+		content: '';
+		position: absolute;
+		min-height: 65vh;
+		width: 100%;
+		z-index: -1;
+	}
+
+	h2.hero_headline {
+		align-self: center;
+		font-size: clamp(1rem, 10.5vw, 100px);
+		line-height: 0.9;
+		padding: 1rem 0;
+		text-align: center;
+	}
+
+	.hero_subhead {
+		font-size: clamp(1.25rem, 4.5vw, 24px);
+		font-weight: 400;
+		padding: 0 0.5rem;
+		text-align: center;
+		width: 100%;
+	}
+}
+
+.c_section[data-section-name='Cultivate Relationships'] > .c_hero:before {
+	background:
+		$c-hero-background,
+		url(../../assets/images/leadership/hero/cultivate-relationships--foreground.png) center center / contain
+			no-repeat,
+		url(../../assets/images/leadership/hero/backgrounds/cultivate-relationships--background.webp) center bottom /
+			contain no-repeat,
+		$brand-black;
+}
+
+.c_section[data-section-name='Prioritizing Rigorously'] > .c_hero:before {
+	background:
+		$c-hero-background,
+		url(../../assets/images/leadership/hero/prioritize-rigorously--foreground.png) center center / contain no-repeat,
+		url(../../assets/images/leadership/hero/backgrounds/prioritize-rigorously--background.webp) center center /
+			contain no-repeat,
+		$brand-black;
+}
+
+.c_section[data-section-name='Unleash Curiosity'] > .c_hero:before {
+	background:
+		$c-hero-background,
+		url(../../assets/images/leadership/hero/unleash-your-curiosity--foreground.png) center bottom / contain
+			no-repeat,
+		url(../../assets/images/leadership/hero/backgrounds/unleash-your-curiosity--background.webp) center bottom /
+			contain no-repeat,
+		$brand-black;
+}
+
+.c_section[data-section-name='embrace systems'] > .c_hero:before {
+	background:
+		$c-hero-background,
+		url(../../assets/images/leadership/hero/embrace-systems--foreground.png) center center / contain no-repeat,
+		url(../../assets/images/leadership/hero/backgrounds/embrace-systems--background.webp) center center / contain
+			no-repeat,
+		$brand-black;
+}
+
+.c_section[data-section-name='Scale Pragmatically'] > .c_hero:before {
+	background:
+		$c-hero-background,
+		url(../../assets/images/leadership/hero/scale-pragmatically--foreground.png) center center / contain no-repeat,
+		url(../../assets/images/leadership/hero/backgrounds/scale-pragmatically--background.webp) center center /
+			contain no-repeat,
+		$brand-black;
 }
