--- a/react-portfolio-contentful/src/assets/styles/_components/_topic.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_topic.scss
@@ -1,13 +1,14 @@
 .c_topic {
     align-items: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    gap: 2rem;
     max-width: 960px;
     padding: 1rem 0.5rem;
     width: 100%;
 
-    @media screen and (min-width: 620px) {
-        gap: 4rem;
+    @media screen and (min-width: $screen-md) {
+        gap: 3rem;
 
         &:nth-child(odd) {
             flex-direction: row;
@@ -18,24 +19,42 @@
         }
     }
 
+    .topic_media {
+        align-items: flex-end;
+        display: flex;
+        flex: 1 1 0;
+        flex-wrap: wrap;
+        gap: 2rem;
+        justify-content: flex-end;
+        padding: 1rem 0.5rem;
+
+        .topic_image__caption {
+            font-weight: 300;
+            font-size: 0.85rem;
+            line-height: 150%;
+        }
+    }
+
     .topic_content {
         padding: 1rem 0.5rem;
+        flex: 1 1 0;
 
         h3.topic_title {
             font-size: 2rem;
             font-weight: 900;
             line-height: 0.9;
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
             text-transform: uppercase;
 
             @media screen and (min-width: 620px) {
-                font-size: 2.25rem;
+                font-size: 2.75rem;
             }
         }
 
         .topic_body {
             border-left: 4px solid $brand-yellow;
-            padding: 0.75rem 0 0.75rem 1.5rem;
+            margin-left: 1.25rem;
+            padding: 0.5rem 0 0.5rem 2rem;
 
             p {
                 margin: 0 0 2rem;
