Got the sort function to work!!!

--- a/react-portfolio-contentful/src/assets/styles/_components/_footer.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_footer.scss
@@ -3,6 +3,7 @@
     background: linear-gradient(0deg, #00001a, transparent);
     gap: 2rem;
     justify-content: flex-end;
+    margin-top: 6rem;
     min-width: 360px;
     padding: 2em 0.5em;
 }
