--- a/react-portfolio-contentful/src/assets/styles/main.module.scss
+++ b/react-portfolio-contentful/src/assets/styles/main.module.scss
@@ -7,6 +7,7 @@
 @import './_components/hero';
 @import './_components/topic';
 @import './_components/card';
+@import './_components/project_list';
 @import './_pages/project';
 @import './_pages/project_list';
 @import './helper';
