Cleaned up react component - cleaning up scss

--- a/react-portfolio-contentful/src/assets/styles/_base.scss
+++ b/react-portfolio-contentful/src/assets/styles/_base.scss
@@ -53,7 +53,11 @@ a:hover {
 li {
 	line-height: 1.35rem;
 	list-style-type: disc;
-	margin-bottom: 0.35rem;
+	margin-bottom: 0.75rem;
+
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 
 .images_100,
